--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension CORBA::Perl.
 
+0.11  Wed Mar 17 18:30:00 2004
+	- bug in Makefile.PL
+
 0.10  Tue Mar 16 12:30:00 2004
 	- first release : extraction from CORBA::XS
 
