--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension CORBA::Perl.
 
+0.20  Tue May 18 18:30:00 2004
+	- compatible with CORBA::IDL 2.40
+
 0.11  Wed Mar 17 18:30:00 2004
 	- bug in Makefile.PL
 
