Import of PERRAD/CORBA-Perl-0.22 from CPAN.
gitpan-cpan-distribution: CORBA-Perl
gitpan-cpan-version:      0.22
gitpan-cpan-path:         PERRAD/CORBA-Perl-0.22.tar.gz
gitpan-cpan-author:       PERRAD
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension CORBA::Perl.
 
+0.22  Mon Nov 15 12:30:00 2004
+	- implementation of visitBaseInterface
+
 0.21  Mon Jun  7 08:30:00 2004
 	- better support for 'import'
 
