Import of PERRAD/CORBA-Perl-0.23 from CPAN.
gitpan-cpan-distribution: CORBA-Perl
gitpan-cpan-version:      0.23
gitpan-cpan-path:         PERRAD/CORBA-Perl-0.23.tar.gz
gitpan-cpan-author:       PERRAD
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension CORBA::Perl.
 
+0.23  Wed Aug 22 12:30:00 2007
+	- add idl2pmcli.pl & client.pm (rpc)
+
 0.22  Mon Nov 15 12:30:00 2004
 	- implementation of visitBaseInterface
 
